--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
   margin: 0 auto;
   padding: 10px;
 }
-.body .menu .row1, .body .menu .row2{
+.body .menu .row1, .body .menu .row2, .body .menu h1{
   text-align: center;
 }
 #filter{
