--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4),  -5px 5px 30px rgba(0, 0, 0, 0.4);
   transform-style: preserve-3d;
 }
-.head img{
+.head a{
   margin: 0 auto;
   padding: 10px;
 }
